[tool.poetry]
name = "calc-and-win"
version = "0.1.0"
description = ""
authors = ["Кирилл Кувшинов <k.koovshinov@gmail.com>"]
readme = "README.md"
packages = [{include = "calc_and_win"}]

[tool.poetry.dependencies]
python = "3.9.16"
attrs = "^22.2.0"
flake8-broken-line = "^0.6.0"
flake8-commas = "^2.1.0"
flake8-isort = "^6.0.0"
flake8-plugin-utils = "^1.3.2"
flake8-return = "^1.2.0"
iniconfig = "^2.0.0"
isort = "^5.11.4"
mccabe = "^0.7.0"
mypy-extensions = "^0.4.3"
mypy = "^0.991"
packaging = "^23.0"
pytest = "^7.2.1"
tomli = "^2.0.1"
typing-extensions = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
